--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "offline-event-logger",
+  "name": "eventlogger",
   "version": "0.1.0",
-  "description": "Cross platform Event Logger for NodeJS written in pure Javascript.",
+  "description": "Cross-platform Event Logger for NodeJS written in pure Javascript.",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DenisCarriere/offline-event-logger.git"
+    "url": "git+https://github.com/DenisCarriere/eventlogger.git"
   },
   "author": "Denis Carriere <@DenisCarriere>",
   "license": "MIT",
