--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "devDependencies": {
     "standard": "^10.0.2",
     "tape": "^4.8.0"
+  },
+  "dependencies": {
+    "fs-extra": "^4.0.1",
+    "mkdirp": "^0.5.1",
+    "moment": "^2.18.1"
   }
 }
