--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "test": "node test.js"
+    "test": "tap test.js",
+    "docs": "documentation readme darwin/index.js --section=API"
   },
   "repository": {
     "type": "git",
@@ -14,7 +15,9 @@
   "author": "Denis Carriere <@DenisCarriere>",
   "license": "MIT",
   "devDependencies": {
+    "documentation": "^5.1.0",
     "standard": "^10.0.2",
+    "tap": "^10.7.1",
     "tape": "^4.8.0"
   },
   "dependencies": {
