--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eventlogger",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Cross-platform Event Logger for NodeJS written in pure Javascript.",
   "main": "index.js",
   "types": "index.d.ts",
@@ -22,7 +22,6 @@
   },
   "dependencies": {
     "fs-extra": "^4.0.1",
-    "mkdirp": "^0.5.1",
-    "moment": "^2.18.1"
+    "mkdirp": "^0.5.1"
   }
 }
