--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "index.d.ts",
   "scripts": {
     "test": "tap test.js",
-    "docs": "documentation readme darwin/index.js --section=API"
+    "docs": "documentation readme lib/darwin.js --section=API"
   },
   "repository": {
     "type": "git",
